スクリプト一本化
Former-commit-id: a6617bda8a085c1805d5c6b6cc7f7ca72fc7a68d